--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 // index.scss
 @import './variables';
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
   background-color: $favColor;
