--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+body {
+  background-color:rgb(252, 249, 245);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sideNav {
+  height: 100%; 
+  width: 200px; 
+  position: fixed; 
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color:  #611f69;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-item {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #FFFFFF;
+  display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#log-button {
+  position:fixed;
+  bottom: 0;
+}
+
+.sideNav NavItem:hover {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
