--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -2,6 +2,10 @@ body {
   background-color:rgb(252, 249, 245);
 }
 
+.App {
+  margin-left: 210px;
+}
+
 .sideNav {
   height: 100%; 
   width: 200px; 
@@ -17,12 +21,13 @@ body {
 .nav-item {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
+  list-style: none;
   font-size: 25px;
   color: #FFFFFF;
   display: block;
 }
 
-#log-button {
+#logOutBtn, #logInBtn {
   position:fixed;
   bottom: 0;
 }
