--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables';
+
 body {
   background-color:rgb(252, 249, 245);
 }
@@ -13,7 +15,7 @@ body {
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color:  #611f69;
+  background-color:  $purple;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
@@ -27,11 +29,29 @@ body {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-link:link {
+  color: white;
+}
+
+.nav-link:active {
+  color: white;
+}
+
+.nav-link:hover {
+  color: white;
+}
+
 #logOutBtn, #logInBtn {
   position:fixed;
   bottom: 0;
-}
-
-.sideNav NavItem:hover {
-  color: white;
+  background-color: $green;
 }
