--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 // index.scss
 @import './variables';
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import './navbar';
+@import './modalContainer';
 
 body {
   background-color: $favColor;
