using local hook for ChannelForm

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,3 +3,11 @@
 ul.slackNav {
   list-style-type: none;
 }
+
+ul.channel-list {
+  padding-inline-start: 0px;
+}
+.channel-list {
+  color: white;
+  list-style-type: none;
+}
