--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import './navbar';
 @import './modalContainer';
+@import './channelList';
 
 body {
   background-color: $favColor;
