--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -5,12 +5,22 @@ body {
 }
 
 .App {
-  margin-left: 210px;
+  margin-left: 260px;
+}
+
+.greeting {
+  margin-top: 50px;
+  color: $purple;
+}
+
+#logo-img {
+width: 200px;
+margin: 0;
 }
 
 .sideNav {
   height: 100%; 
-  width: 200px; 
+  width: 250px; 
   position: fixed; 
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
@@ -21,7 +31,7 @@ body {
 }
 
 .nav-item {
-  padding: 6px 8px 6px 16px;
+  // padding: 6px 8px 6px 16px;
   text-decoration: none;
   list-style: none;
   font-size: 25px;
@@ -31,25 +41,11 @@ body {
 
 ul {
   list-style: none;
+  margin: 0px;
 }
-
-.nav-link {
-  color: white;
-  text-decoration: none;
+#home-link.nav-link {
+  padding: 0px;
 }
-
-.nav-link:link {
-  color: white;
-}
-
-.nav-link:active {
-  color: white;
-}
-
-.nav-link:hover {
-  color: white;
-}
-
 #logOutBtn, #logInBtn {
   position:fixed;
   bottom: 0;
