adding full crud for channels using ellipsis menu

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -9,6 +9,10 @@ ul.channel-list {
   padding-inline-start: 0px;
 }
 
+.add-channel-link {
+  color: white;
+}
+
 .channel-list {
   color: white;
   list-style-type: none;
