--- a/src/styles/_channelList.scss
+++ b/src/styles/_channelList.scss
@@ -7,7 +7,8 @@
 }
 
 .channel-list li {
-  max-width: 130px;
+  max-width: 90%; 
   overflow: hidden;
-  white-space: nowrap;
+  padding-left: 1em;
+  text-indent: -.55em;
 }
