rounding corners on pop-up menu

--- a/src/styles/_channelPopup.scss
+++ b/src/styles/_channelPopup.scss
@@ -3,6 +3,7 @@
 .channel-pop-up-content {
   position: 'left-center';
   background-color: white;
+  border-radius: 5px;
 }
 
 .channel-pop-up-content ul {
