--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -30,12 +30,6 @@ margin: 0;
   padding-top: 20px;
 }
 
-@media (max-width: 677px) {
-  .tog {
-    margin-left: 0px;
-  }
-}
-
 .nav-item {
   // padding: 6px 8px 6px 16px;
   text-decoration: none;
@@ -52,8 +46,14 @@ ul {
 #home-link.nav-link {
   padding: 0px;
 }
-#logOutBtn, #logInBtn {
+#logOutBtn {
   position:fixed;
-  bottom: 0;
+  bottom: 10px;
   background-color: $green;
+}
+
+#logInBtn {
+  position:fixed;
+  bottom: 10px;
+  background-color: $yellow;
 }
